# seamless_sync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UDPListen.c  UDPSend.c  button.c  getMyIp.c  headerConfig.c  main.c  master.c  myIp.c  runner.c  sampleListen.c  sampleUDP.c  ssync.c
archive/: AES.c  RSA.c  SSDPListener  SSDPListener.c  TCPClient.c  TCPServer.c  client.c  dummyReceiver.c  dummySender  dummySender.c  example.txt  fileTransfer_client  fileTransfer_client.c  fileTransfer_server  fileTransfer_server.c  getClientSock.c  getClientSocket.c  getServerSocket.c  joinSSDP.c  myIp.c  receiveFile.c  sampleListen.c  sampleSend.c  sampleUDP.c  sendFile.c  sendUDP  sendUdp  sendUdp.c  server.c  ssdplisten  threadAndPara.c  timer  timer.c
build-qtUi-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
css/: style.css
include/: AES.h  KeyStorageGlobal.h  RSA.h  RSAKeyInitializer.h  SSDPErrorHandle.h  SSDPListenerConnection.h  UDPErrorHandle.h  UDPListen.h  UDPSend.h  activate.h  check_network_status.h  client.h  createButton.h  createHeaderBar.h  createImage.h  createMainWindow.h  createVerticalBox.h  createWrappedLabel.h  customDataTypes.h  getClientSocket.h  getMyIp.h  getServerSocket.h  headerMenu.h  joinSSDP.h  onDeviceListActivated.h  onDeviceListActivatedOld.h  onRefreshClicked.h  onSsdpScanCompleted.h  onStartClicked.h  receiveFile.h  removeOldChild.h  runSsdpScan.h  sendFile.h  server.h  uiCustomData.h  updateUiOnScan.h  whileDeviceClicked.h
qtUi/: CMakeLists.txt  main.cpp  (+3 more)
(+86 files in other folders)
